pagina offers en desktop

--- a/styles/common-templates/_variables.scss
+++ b/styles/common-templates/_variables.scss
@@ -11,6 +11,7 @@ $color-gris-oscurecido: #999999;
 $color-oscuro-mas-claro: #292929;
 $color-rosa: #DE5777;
 $color-dorado: #AD9D82;
+$color-gris-mas-claro: #ECECEC;
 
 @mixin section-title{
     font-size: 3.4rem;
